--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <section>
-      <div>
-        <h1>Transitions API</h1>
+      <div class="links-down">
+        <h1>Themes</h1>
         <a href="./transitions-api/page1.html"> Go to Transitions Api</a>
+        <a href="./anchor-positioning/index.html"> Go to Anchor Positioning</a>
       </div>
     </section>
   </body>
