--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="links-down">
         <h1>Themes</h1>
         <a href="./transitions-api/page1.html"> Go to Transitions Api</a>
-        <a href="./anchor-positioning/index.html"> Go to Anchor Positioning</a>
+        <a href="./scrolling-animations/index.html">
+          Go to Scrolling Animations</a
+        >
       </div>
     </section>
   </body>
