add link to index in scrolling animations

--- a/scrolling-animations/index.html
+++ b/scrolling-animations/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <section>
+      <a href="../" class="home-link">Index</a>
       <div class="text-container">
         <h1>Scroll Down</h1>
         <p class="text-block">
