links shorter and waves animation

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <section>
       <div class="links-down">
         <h1>Themes</h1>
-        <a href="./transitions-api/page1.html"> Go to Transitions Api</a>
-        <a href="./scrolling-animations/index.html">
-          Go to Scrolling Animations</a
-        >
+        <a href="./transitions-api"> Go to Transitions Api</a>
+        <a href="./scrolling-animations"> Go to Scrolling Animations</a>
+        <a href="./waves-animation"> Go to Wave Animation</a>
       </div>
     </section>
   </body>
