--- a/transitions-api/page1.html
+++ b/transitions-api/page1.html
@@ -13,7 +13,7 @@
       <h1>Page 1</h1>
       <p>This page slides in from the bottom.</p>
       <nav>
-        <a href="./transition-home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./page1.html">Page 1</a>
         <a href="./page2.html">Page 2</a>
       </nav>
