--- a/transitions-api/index.html
+++ b/transitions-api/index.html
@@ -13,7 +13,7 @@
       <h1>Slide In/Out Unique to Page</h1>
       <p>Each page slides in and out in a different direction.</p>
       <nav>
-        <a href="./transition-home.html">Home</a>
+        <a href="./index.html">Home</a>
         <a href="./page1.html">Page 1</a>
         <a href="./page2.html">Page 2</a>
       </nav>
