--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="./transitions-api"> Go to Transitions Api</a>
         <a href="./scrolling-animations"> Go to Scrolling Animations</a>
         <a href="./waves-animation"> Go to Wave Animation</a>
+        <a href="./svg-animation/"> Go to SVG Animation</a>
       </div>
     </section>
   </body>
