change index link to home link, start curves in css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="./scrolling-animations"> Go to Scrolling Animations</a>
         <a href="./waves-animation"> Go to Wave Animation</a>
         <a href="./svg-animation/"> Go to SVG Animation</a>
+        <a href="./curves-background/"> Go to Curves Background</a>
       </div>
     </section>
   </body>
