--- a/svg-animation/index.html
+++ b/svg-animation/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <body>
-        <a href="../" class="home-link">Index</a>
+        <a href="../" class="home-link">Home</a>
 
         <!-- This svg is generated in Figma, the ids are the group names -->
 
