--- a/transitions-api/index.html
+++ b/transitions-api/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="standard-content">
-      <a href="../" class="home-link">Index</a>
+      <a href="../" class="home-link">Home</a>
       <h1>Slide In/Out Unique to Page</h1>
       <p>Each page slides in and out in a different direction.</p>
       <nav>
