--- a/waves-animation/index.html
+++ b/waves-animation/index.html
@@ -7,7 +7,7 @@
     <title>Waves CSS Animations</title>
   </head>
   <body>
-    <a href="../" class="home-link">Index</a>
+    <a href="../" class="home-link">Home</a>
     <h2 class="border">WAVES!!</h2>
     <h2 class="wave">WAVES!!</h2>
   </body>
