--- a/transitions-api/page2.html
+++ b/transitions-api/page2.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="standard-content">
-      <a href="../" class="home-link">Index</a>
+      <a href="../" class="home-link">Home</a>
       <h1>Page 2</h1>
       <p>This page slides in from the left to the right.</p>
       <nav>
