style index, proyect form

--- a/svg-animation/index.html
+++ b/svg-animation/index.html
@@ -42,7 +42,7 @@
             const svg = document.getElementById('triangles');
       
             svg.onclick = (e) => {
-              const colors = ['red', 'blue', 'green', 'orange', 'pink', 'purple']
+              const colors = ['red', 'blue', 'green', 'orange', 'pink', 'purple', 'yellow', 'gray', 'white']
               const rando = () => colors[Math.floor(Math.random() * colors.length)];
               document.documentElement.style.cssText = `
               --dark-color: ${rando()};
