--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Join me on my journey to master CSS and web development. Explore my collection of tutorials and self-guided projects, and stay up-to-date with the latest trends and techniques. Let’s learn and grow together!"
+    />
+    <meta
+      name="keywords"
+      content="CSS, web development, tutorials, self-guided projects, latest trends, techniques, learn, grow"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://gabrielmoris.github.io/css-advanced/" />
+    <title>My journey to keep fresh my CSS skills and follow new trends.</title>
   </head>
   <body>
     <section>
@@ -15,6 +26,7 @@
         <a href="./waves-animation"> Go to Wave Animation</a>
         <a href="./svg-animation/"> Go to SVG Animation</a>
         <a href="./curves-background/"> Go to Curves Background</a>
+        <a href="./animated-login-form/"> Go to Animated Login Form</a>
       </div>
     </section>
   </body>
