--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="./svg-animation/"> Go to SVG Animation</a>
         <a href="./curves-background/"> Go to Curves Background</a>
         <a href="./animated-login-form/"> Go to Animated Login Form</a>
+        <a href="./parallax/"> Go to Parallax Effect</a>
       </div>
     </section>
   </body>
