add link to the repository

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <title>My journey to keep fresh my CSS skills and follow new trends.</title>
   </head>
   <body>
+    <div class="github-link-wrapper">
+      <a href="https://github.com/gabrielmoris/css-advanced" target="_blank">
+        <img class="github--icn" src="./github-mark.svg" alt="github-icn"
+      /></a>
+      <p class="github--icn__txt">Check my Github Repo</p>
+    </div>
     <section>
       <div class="links-down">
         <h1>Themes</h1>
