add responsiveness in all proyects

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       <a href="https://github.com/gabrielmoris/css-advanced" target="_blank">
         <img class="github--icn" src="./github-mark.svg" alt="github-icn"
       /></a>
-      <p class="github--icn__txt">Check my Github Repo</p>
+      <p class="github--icn__txt">
+        Check out <br />
+        my Github Repo
+      </p>
     </div>
     <section>
+      <h1 class="links--title">Themes</h1>
       <div class="links-down">
-        <h1>Themes</h1>
         <a href="./transitions-api"> Go to Transitions Api</a>
         <a href="./scrolling-animations"> Go to Scrolling Animations</a>
         <a href="./waves-animation"> Go to Wave Animation</a>
