--- a/3d-animation/index.html
+++ b/3d-animation/index.html
@@ -9,9 +9,9 @@
   <body>
     <a class="home-link" href="../">Home</a>
     <div class="yoda">
-      <img class="logo" src="/3d-animation/yoda-logo.webp" alt="yoda-logo" />
-      <img class="front-img" src="/3d-animation/yoda-front.webp" alt="yoda-front" />
-      <img class="bg-img" src="/3d-animation/yoda-on-dagobah.jpg" alt="yoda-bg" />
+      <img class="logo" src="./3d-animation/yoda-logo.webp" alt="yoda-logo" />
+      <img class="front-img" src="./3d-animation/yoda-front.webp" alt="yoda-front" />
+      <img class="bg-img" src="./3d-animation/yoda-on-dagobah.jpg" alt="yoda-bg" />
     </div>
   </body>
 </html>
