add text svg animation

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="./animated-login-form/"> Go to Animated Login Form</a>
         <a href="./parallax/"> Go to Parallax Effect</a>
         <a href="./3d-animation/"> Go to 3D Animation</a>
+        <a href="./svg-text-animation/"> Go to SVG text Animation</a>
       </div>
     </section>
   </body>
