--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="./3d-animation/"> Go to 3D Animation</a>
         <a href="./svg-text-animation/"> Go to SVG text Animation</a>
         <a href="./media-queries/"> Go to Media Queries</a>
+        <a href="./pseudo-elements/"> Go to Pseudo Elements</a>
       </div>
     </section>
   </body>
