--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Animated Login Form</title>
+    <title>Media Queries</title>
   </head>
   <body>
     <nav class="home-link">
