--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a href="./svg-text-animation/"> Go to SVG text Animation</a>
         <a href="./media-queries/"> Go to Media Queries</a>
         <a href="./pseudo-elements/"> Go to Pseudo Elements</a>
+        <a href="./sunset/"> Go to Sunset</a>
       </div>
     </section>
   </body>
