--- a/index.html
+++ b/index.html
@@ -9,19 +9,14 @@
       name="description"
       content="Join me on my journey to master CSS and web development. Explore my collection of tutorials and self-guided projects, and stay up-to-date with the latest trends and techniques. Let’s learn and grow together!"
     />
-    <meta
-      name="keywords"
-      content="CSS, web development, tutorials, self-guided projects, latest trends, techniques, learn, grow"
-    />
+    <meta name="keywords" content="CSS, web development, tutorials, self-guided projects, latest trends, techniques, learn, grow" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gabrielmoris.github.io/css-advanced/" />
     <title>My journey to keep fresh my CSS skills and follow new trends.</title>
   </head>
   <body>
     <div class="github-link-wrapper">
-      <a href="https://github.com/gabrielmoris/css-advanced" target="_blank">
-        <img class="github--icn" src="./github-mark.svg" alt="github-icn"
-      /></a>
+      <a href="https://github.com/gabrielmoris/css-advanced" target="_blank"> <img class="github--icn" src="./github-mark.svg" alt="github-icn" /></a>
       <p class="github--icn__txt">
         Check out <br />
         my Github Repo
@@ -41,7 +36,7 @@
         <a href="./svg-text-animation/"> Go to SVG text Animation</a>
         <a href="./media-queries/"> Go to Media Queries</a>
         <a href="./pseudo-elements/"> Go to Pseudo Elements</a>
-        <a href="./sunset/"> Go to Sunset</a>
+        <a href="./pulsar/"> Go to Pulsar animation</a>
       </div>
     </section>
   </body>
