--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="./media-queries/"> Go to Media Queries</a>
         <a href="./pseudo-elements/"> Go to Pseudo Elements</a>
         <a href="./pulsar/"> Go to Pulsar animation</a>
+        <a href="./fancy-button/"> Go to Fancy Button</a>
       </div>
     </section>
   </body>
