--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="./pseudo-elements/"> Go to Pseudo Elements</a>
         <a href="./pulsar/"> Go to Pulsar animation</a>
         <a href="./fancy-button/"> Go to Fancy Button</a>
+        <a href="./transition-3d/"> Go to Transition 3D</a>
       </div>
     </section>
   </body>
