solve unplash api block

--- a/media-queries/index.html
+++ b/media-queries/index.html
@@ -23,9 +23,9 @@
     </div>
     <script>
       const generateRdmImg = () =>
-        `https://source.unsplash.com/random/500x600?${Math.floor(
+        `https://picsum.photos/seed/${Math.floor(
           Math.random() * 100
-        )}`;
+        )}fff${Math.floor(Math.random() * 100)}aaa/500/600`;
       const products = [
         {
           image: generateRdmImg(),
