--- a/scrolling-animations/index.html
+++ b/scrolling-animations/index.html
@@ -48,7 +48,7 @@
           voluptate!
         </p>
 
-        <img src="https://source.unsplash.com/random/500x600" alt="pic-1" />
+        <img src="https://picsum.photos/seed/asdas/500/600" alt="pic-1" />
 
         <p class="text-block">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione
@@ -87,7 +87,7 @@
           voluptate!
         </p>
 
-        <img src="https://source.unsplash.com/random/500x620" alt="pic-2" />
+        <img src="https://picsum.photos/seed/sssss/500/600" alt="pic-1" />
 
         <p class="text-block">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione
@@ -126,7 +126,7 @@
           voluptate!
         </p>
 
-        <img src="https://source.unsplash.com/random/500x610" alt="pic-3" />
+        <img src="https://picsum.photos/seed/picsuddsm/500/600" alt="pic-3" />
 
         <p class="text-block">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione
@@ -165,7 +165,10 @@
           voluptate!
         </p>
 
-        <img src="https://source.unsplash.com/random/500x605" alt="pic-4" />
+        <img
+          src="https://picsum.photos/seed/aaaaaaaaaaaa/500/600"
+          alt="pic-4"
+        />
         <p class="text-block">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ratione
           nesciunt ut dignissimos natus voluptatem, eius quas quaerat deleniti
@@ -203,7 +206,7 @@
           voluptate!
         </p>
 
-        <img src="https://source.unsplash.com/random/500x604" alt="pic-4" />
+        <img src="https://picsum.photos/seed/picsaum/500/600" alt="pic-4" />
       </div>
     </section>
   </body>
