--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a href="./fancy-button/"> Go to Fancy Button</a>
         <a href="./transition-3d/"> Go to Transition 3D</a>
         <a href="./pyramid/"> Go to Pyramid</a>
+        <a href="./animated-text/"> Go to Animated Text</a>
       </div>
     </section>
   </body>
