masks and filters

--- a/masks-and-filters/index.html
+++ b/masks-and-filters/index.html
@@ -10,6 +10,6 @@
     <nav class="home-link">
       <a href="../" class="home-link">Home</a>
     </nav>
-    <h1>Glitching Text</h1>
+    <img src="https://picsum.photos/seed/a/600/600" alt="Original Image" />
   </body>
 </html>
