--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <a href="./pulsar/"> Go to Pulsar animation</a>
         <a href="./fancy-button/"> Go to Fancy Button</a>
         <a href="./transition-3d/"> Go to Transition 3D</a>
+        <a href="./layer-query/"> Go @layer queries</a>
       </div>
     </section>
   </body>
