--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a href="./pyramid/"> Go to Pyramid</a>
         <a href="./masks-and-filters/"> Go to Masks and filters</a>
         <a href="./layer-query/"> Go @layer queries</a>
+        <a href="./container-query/"> Go @container queries</a>
       </div>
     </section>
   </body>
