--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="./masks-and-filters/"> Go to Masks and filters</a>
         <a href="./layer-query/"> Go @layer queries</a>
         <a href="./container-query/"> Go @container queries</a>
+        <a href="./dynamic-viewport/"> Go to Dynamic viewport</a>
       </div>
     </section>
   </body>
