--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <section>
       <h1 class="links--title">Themes</h1>
       <div class="links-down">
+        <a href="./browser-rendering-pipeline/"> Go to Browser Rendering Pipeline</a>
         <a href="./transitions-api"> Go to Transitions Api</a>
         <a href="./scrolling-animations"> Go to Scrolling Animations</a>
         <a href="./waves-animation"> Go to Wave Animation</a>
