--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
       name="description"
       content="Join me on my journey to master CSS and web development. Explore my collection of tutorials and self-guided projects, and stay up-to-date with the latest trends and techniques. Let’s learn and grow together!"
     />
-    <meta name="keywords" content="CSS, web development, tutorials, self-guided projects, latest trends, techniques, learn, grow" />
+    <meta
+      name="keywords"
+      content="CSS, web development, tutorials, self-guided projects, latest trends, techniques, learn, grow"
+    />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gabrielmoris.github.io/css-advanced/" />
     <title>My journey to keep fresh my CSS skills and follow new trends.</title>
   </head>
   <body>
     <div class="github-link-wrapper">
-      <a href="https://github.com/gabrielmoris/css-advanced" target="_blank"> <img class="github--icn" src="./github-mark.svg" alt="github-icn" /></a>
+      <a href="https://github.com/gabrielmoris/css-advanced" target="_blank">
+        <img class="github--icn" src="./github-mark.svg" alt="github-icn"
+      /></a>
       <p class="github--icn__txt">
         Check out <br />
         my Github Repo
@@ -25,7 +30,9 @@
     <section>
       <h1 class="links--title">Themes</h1>
       <div class="links-down">
-        <a href="./browser-rendering-pipeline/"> Go to Browser Rendering Pipeline</a>
+        <a href="./browser-rendering-pipeline/">
+          Go to Browser Rendering Pipeline</a
+        >
         <a href="./transitions-api"> Go to Transitions Api</a>
         <a href="./scrolling-animations"> Go to Scrolling Animations</a>
         <a href="./waves-animation"> Go to Wave Animation</a>
@@ -45,6 +52,7 @@
         <a href="./layer-query/"> Go @layer queries</a>
         <a href="./container-query/"> Go @container queries</a>
         <a href="./dynamic-viewport/"> Go to Dynamic viewport</a>
+        <a href="./dynamic-resize/"> Go to Dynamic resize</a>
       </div>
     </section>
   </body>
