make child really dinamic

--- a/dynamic-resize/index.html
+++ b/dynamic-resize/index.html
@@ -11,9 +11,9 @@
       <a href="../" class="home-link">Home</a>
     </nav>
     <div class="parent">
-      <div class="child" style="height: 100px"></div>
-      <div class="child" style="height: 150px"></div>
-      <div class="child" style="height: 200px"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
     </div>
     <script src="./script.js"></script>
   </body>
