start loading animation

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a href="./dynamic-viewport/"> Go to Dynamic viewport</a>
         <a href="./dynamic-resize/"> Go to Dynamic resize</a>
         <a href="./grid-masonry/"> Go to Grid (masonry)</a>
+        <a href="./loading/"> Loading animation</a>
       </div>
     </section>
   </body>
