--- a/loading/index.html
+++ b/loading/index.html
@@ -11,9 +11,9 @@
       <a href="../" class="home-link">Home</a>
     </nav>
     <div class="loading-container">
-      <div class="dot1 dot" />
-      <div class="dot2 dot" />
-      <div class="dot3 dot" />
+      <div class="dot" />
+      <div class="dot" />
+      <div class="dot" />
     </div>
   </body>
 </html>
