--- a/loading/index.html
+++ b/loading/index.html
@@ -11,9 +11,9 @@
       <a href="../" class="home-link">Home</a>
     </nav>
     <div class="loading-container">
-      <div class="dot" />
-      <div class="dot" />
-      <div class="dot" />
+      <div class="dot dot1"></div>
+      <div class="dot dot2"></div>
+      <div class="dot dot3"></div>
     </div>
   </body>
 </html>
