--- a/dynamic-resize/index.html
+++ b/dynamic-resize/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Pseudo Elements</title>
+    <title>Dynamic Resize</title>
   </head>
   <body>
     <nav class="home-link">
