--- a/grid-masonry/index.html
+++ b/grid-masonry/index.html
@@ -11,7 +11,7 @@
       <nav class="home-link">
         <a href="../" class="home-link">Home</a>
       </nav>
-      <h1>Dynamic Layout</h1>
+      <h1>Grid Mansonry</h1>
     </header>
     <main>
       <div class="grid">
