--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <a href="./grid-masonry/"> Go to Grid (masonry)</a>
         <a href="./loading/"> Loading animation</a>
         <a href="./grid/"> Grid</a>
+        <a href="./toggle-switch/">Toggle Switch</a>
       </div>
     </section>
   </body>
