add :has() selector

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <a href="./loading/"> Loading animation</a>
         <a href="./grid/"> Grid</a>
         <a href="./toggle-switch/">Toggle Switch</a>
+        <a href="./css-has-selector/">:has()</a>
       </div>
     </section>
   </body>
